# brca-draft1

./: .gitignore  _PROJECT_CONTEXT_FINAL.md  api.txt  bc_unknown_evidence.py  bombs_to_exclude.txt  briefing.py  clean_project.py  cleanup.py  config.yaml  config.yml  create_report.py  create_structure_map.py  curated_potential_downloads.csv  human_readable_data_report.html  inspect_project.py  install-project.bat  launch.json  project_diagnostics_deep_scan.py  project_dictionary.json  project_doctor.py  project_structure.txt  pyproject.toml  requirements.txt  run-intel.bat  run-main.bat  run_autonomous_discovery.py  run_pipeline.py  run_processing_pipeline.py  sanitization_log_.csv  sanitization_log_v3_data.csv  sanitization_log_v4_data.csv  sanitize_filenames.py  setup.py  start-scheduler.bat  start-workers.bat
_diagnostics_full/: codebook_candidates.csv  column_signals.jsonl  ext_counts.csv  headers_samples.jsonl  id_hits.jsonl  inventory.csv  largest_files.csv  report.md  suggested_exclude_globs.txt  suggested_include_globs.txt
_samples/: annotate_structured_v2.py  env.txt  ext_counts.txt  extract_unstructured_lowmem.py  largest_20.csv  link_patients_across_cohorts.py  sample_structured_head.csv
compass_brca/: step01_intelligent_fetch_and_process.py  step02_audit_raw_data.py  step03_clean_and_normalize.py  step04_build_crosswalk_20.py  step04_build_crosswalk_21.py  step05_build_vocabulary.py  step05_build_vocabulary_stratified.py  step05a_filter_by_vocabulary.py  step06_annotate_data.py  step07_analyze_missingness.py  step08_reconcile_manifests.py  (+1 more)
(+139 files in other folders)
