# pyproject.toml
# DEFINITIVE MODERN CONFIGURATION

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compass_brca"
version = "1.0.0"
description = "A pipeline for analyzing nanomedicine and breast cancer data."
readme = "README.md"  # You can create this file later
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# This is the modern way to define the console script
[project.scripts]
run-pipeline = "compass_brca.__main__:main"